Add card_present type in checkout_session.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: stripe
-version: 4.11.0-mod
+version: 4.11.0-pre-2
 description: A simple Stripe API wrapper, that is meant to be used on the server.
 homepage: https://github.com/enyo/stripe-dart
 documentation: https://github.com/enyo/stripe-dart/blob/main/README.md
